syntax = "proto3";

option go_package = "rockbackup/proto";

package proto;



service Agent {
  rpc RunCmd (RunCmdRequest) returns (RunCmdReply) {}
}

message RunCmdRequest {
  string name = 1;
  repeated string args = 2;
  repeated string envs = 3;
}
message RunCmdReply {
    int32 return_code = 1;
    bytes stdout = 2;
    bytes stderr = 3;
}
